--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@shadcn/ui": "^0.0.4",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/react-chartjs-2": "^2.0.2",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.13.0"
   },
